<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/featured_image"
            android:tint="#33000000"
            android:contentDescription="@null"/>

        <ImageButton
            android:id="@+id/close_ibtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_close_white_24dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/recipe_list_content_desc_close_page" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="96dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/chef"
                android:padding="2dp"
                android:background="@drawable/bg_circle_filled_white"
                android:contentDescription="@string/recipe_list_content_desc_chef"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_list_welcome_title"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/primary_text_light"
                android:fontFamily="@string/font_family_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_list_welcome_sub_title"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/secondary_text_light"
                android:fontFamily="@string/font_family_regular"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/recipe_list_card_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="8dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        android:clipToPadding="false"
                        tools:listitem="@layout/item_recipe_list_tablet"/>

                </android.support.v7.widget.CardView>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:visibility="gone"
            android:background="?android:attr/windowBackground">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:fontFamily="@string/font_family_medium"
                android:gravity="center_horizontal"
                android:textColor="@color/secondary_text_dark"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/recipe_list_loading_recipe" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:visibility="gone"
            android:background="?android:attr/windowBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_error_view_cloud"
                android:tint="@color/active_icon_dark"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:textColor="@color/secondary_text_dark"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:fontFamily="@string/font_family_medium"
                tools:text="Can't load data.\nCheck your network connection." />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/retry_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_list_action_try_again"
                android:fontFamily="@string/font_family_medium"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

    </FrameLayout>

</layout>